Add basic tests