@@ -10,7 +10,7 @@ repositories {
 }
 
 javafx {
-    modules = ["javafx.controls","javafx.fxml"]
+    modules = ["javafx.controls", "javafx.fxml"]
 }
 
 
@@ -23,6 +23,7 @@ sourceCompatibility = 1.11
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile "org.openjfx:javafx-graphics:11:win"
+    testCompile 'org.testfx:testfx-junit:4.0+'
 }
 shadowJar {
     baseName = 'lightproj'
@@ -30,3 +31,20 @@ shadowJar {
 
 
 mainClassName = "application.Main"
+
+test {
+    sourceSets {
+        main.java.setOutputDir(file("build/classes/java/test"))
+    }
+    scanForTestClasses = false
+    include "**/*Test.class"
+    jvmArgs(
+            '--add-exports=javafx.graphics/com.sun.javafx.application=org.testfx',
+//            '--add-exports=javafx.graphics/com.sun.glass.ui=org.testfx.monocle',
+            '--add-exports=lightmoduleproj/application=javafx.fxml',
+            '--add-opens=lightmoduleproj/application=javafx.fxml',
+            '--add-opens=javafx.graphics/com.sun.glass.ui=org.testfx'
+    )
+
+}
+
